--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,5 @@
 ---
-import * as CONTENT from "../pages/content"
+import * as CONTENT from "../pages/content";
 ---
 
 <!-- Hero section -->
@@ -11,7 +11,7 @@ import * as CONTENT from "../pages/content"
       class="rounded-full border-primary self-end shadow-2xl md:w-24 w-20 aspect-square"
     >
       <img
-        src="/profile.jpg"
+        src="/profile.PNG"
         alt="profile_picture"
         class="object-cover w-full h-full rounded-full grayscale-[50] hover:grayscale-0"
       />
