--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,19 +1,27 @@
 <footer class="bg-background/5 flex justify-between items-center px-2 py-1">
-    <p>© 2023 Peter Griffin</p>
+    <p>© 2023 Sergio Arnaldo Rubino</p>
 
     <p>
-        <a href="https://github.com/uskhokhar/astro-vitae" target="_blank" class="underline underline-offset-2 hover:no-underline">
+        <a
+            href="https://github.com/uskhokhar/astro-vitae"
+            target="_blank"
+            class="hover: text-neutral-800"
+        >
             Astro-Vitae Template
         </a>
-        developed by 
-        <a href="https://uskhokhar.me" target="_blank" class="underline underline-offset-2 hover:no-underline">
-            U.S.Khokhar 🤓
+        developed by
+        <a
+            href="https://uskhokhar.me"
+            target="_blank"
+            class="hover: text-neutral-800"
+        >
+            U.S.Khokhar
         </a>
     </p>
 </footer>
 
 <style>
-    p{
+    p {
         @apply text-sm text-text/50;
     }
 
