Update Footer and About sections

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,19 +19,16 @@ import Footer from "../components/Footer.astro";
 		<meta name="generator" content={Astro.generator} />
 		<title>CV | {CONTENT.name}</title>
 	</head>
-	<body class="bg-background text-text flex flex-col min-h-screen">
+	<body class="bg-gray-900 text-text flex flex-col min-h-screen">
 		<Header />
 
 		<!-- Bar Effect -->
 		<article
 			class="mx-auto h-fit max-w-3xl w-[95vw] flex flex-nowrap bg-slate-400"
 		>
-			<div class="bg-orange-300 hover:scale-x-[2] w-full h-1.5" id="one">
-			</div>
-			<div class="bg-slate-500 hover:scale-x-[2] w-full h-1.5" id="two">
-			</div>
-			<div class="bg-red-300 hover:scale-x-[2] w-full h-1.5" id="three">
-			</div>
+			<div class="bg-orange-300 hover:scale-x-[2] w-full h-1.5" id="one"></div>
+			<div class="bg-slate-500 hover:scale-x-[2] w-full h-1.5" id="two"></div>
+			<div class="bg-red-300 hover:scale-x-[2] w-full h-1.5" id="three"></div>
 		</article>
 
 		<main
