--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,26 +1,12 @@
-<footer class="bg-background/5 flex justify-between items-center px-2 py-1">
-    <p>© 2023 Sergio Arnaldo Rubino</p>
-
-    <p>
-        <a
-            href="https://github.com/uskhokhar/astro-vitae"
-            target="_blank"
-            class="hover: text-neutral-800"
-        >
-            Astro-Vitae Template
-        </a>
-        developed by
-        <a
-            href="https://uskhokhar.me"
-            target="_blank"
-            class="hover: text-neutral-800"
-        >
-            U.S.Khokhar
-        </a>
-    </p>
+<footer class="w-full max-w-screen-xl mx-auto p-4 md:py-8">
+    <!-- bg-background/5 flex justify-between items-center px-2 py-1 -->
+    <hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8" />
+    <span class="block text-sm text-gray-500 text-center dark:text-gray-400"
+        >© 2023 Sergio Arnaldo Rubino</span
+    >
 </footer>
 
-<style>
+<!-- <style>
     p {
         @apply text-sm text-text/50;
     }
@@ -28,4 +14,4 @@
     a {
         @apply underline hover:text-text/80;
     }
-</style>
+</style> -->
